src/stylesheets/skin.css
/* ... */
.team-1 h6.occupation,
.team-2 h6.occupation{
	margin-bottom: 0.3rem;
}

/* Project Title */
h4.project-title{
	font-size: 1.4rem;
}
.overlay-info .project-description{
	font-size: 1.2rem;
	opacity: 0.7;
}

/* Rollover */
.overlay-info > span > span{
	font-size: 1.5rem;
	font-weight: 700;
	letter-spacing: 0.07rem;
	color: #333333;
}

/* Footer Text */
.footer h4{
	font-size: 1.5rem;
	color: #000;
}
.footer .copyright{
	font-size: 1.1rem;
}
.footer p{
	font-size: 1.6rem;
	margin: 0 0 2rem;
}

/* Lead */
.lead{
	font-size: 2rem;
}

/* Title Classes */
.title-xlarge{
	font-size: 8rem;
}
.tms-caption.scale.title-xlarge,
.tmp-content .title-xlarge{
	font-size: 8rem;
	line-height: 7.5rem;
}
.title-large{
	font-size: 6.2rem;
}
.tms-caption.scale.title-large,
.tmp-content .title-large{
	font-size: 6.2rem;
	line-height: 5.7rem;
}
.title-medium{
	font-size: 2.5rem;
}
.tms-caption.scale.title-medium,
.tmp-content .title-medium{
	font-size: 3rem;
	line-height: 2.5rem;
}
.title-small{
	font-size: 1.1rem;
}
.tms-caption.scale.title-small,
.tmp-content .title-small{
	font-size: 1.1rem;
	line-height: 0.6rem;
}

/* Text Classes */
.text-xlarge{
	font-size: 4.6rem;
	line-height: 1.4;
}
.text-large{
	font-size: 4rem;
	line-height: 1.4;
}
.text-medium{
	font-size: 2.4rem;
	line-height: 1.4;
}
.text-small{
	font-size: 1.6rem;
	line-height: 1.4;
}

/* Weight Classes */
.weight-light{
	font-weight: 300;
}
.weight-bold{
	font-weight: 700;
}

@media only screen and (max-width: 768px){
	.header .logo {
		margin-left: 2rem;
	}
	.footer {
		text-align: center;
	}
	h1,
	.title-xlarge {
		font-size: 5rem !important;
	}
	.title-medium {
		font-size: 2rem;
	}
	h2,
	.title-large{
		font-size: 2.8rem;
	}
	h3 {
		font-size: 1.8rem;
	}
	h4 {
		font-size: 1.5rem;
	}
	h5{
		font-size: 1.3rem;
	}
	h6{
		font-size: 1.1rem;
	}
	.blog-regular .post-title,
	.blog-wide .post-title{
		font-size: 3rem;
	}
	h5.tms-caption, 
	.tmp-content h5{
		font-size: 1.4rem;
	}
	.tms-caption.title-xlarge,
	.tmp-content .title-xlarge{
		font-size: 4.5rem;
		line-height: 4.5rem;
	}

	/* Lead */
	.lead{
		font-size: 1.7rem;
	}

	/* Text Classes */
	.text-xlarge{
		font-size: 3.1rem;
	}
	.text-large{
		font-size: 2.5rem;
	}
	.text-medium{
		font-size: 1.9rem;
	}
	.text-small{
		font-size: 1.1rem;
	}

	/* Helpers */
	.fullscreen-section .background-on-mobile{
		background: #f4f4f4;
	}
	.fullscreen-section .background-on-mobile *{
		color: #666 !important;
	}
	.fullscreen-section .background-on-mobile h1,
	.fullscreen-section .background-on-mobile h2,
	.fullscreen-section .background-on-mobile h3,
	.fullscreen-section .background-on-mobile h4,
	.fullscreen-section .background-on-mobile h5,
	.fullscreen-section .background-on-mobile h6{
		color: #000 !important;
	}
}

/*------------------------------------------------------------------
[2. Background Color & Color Classes]
*/

body, 
.content,
.section-block:not([class*="bkg-"]),
.featured-media:after,
.fullscreen-sections-wrapper{
	background-color: #fff;
}
[class*="intro-title-"] + .section-block,
.featured-media + .section-block{
	border-top-color: #fff;
}
@media only screen and (min-width: 960px){
	.header {
		border-top-color: #fff;
	}
}

/* grey */
.bkg-grey{
	background-color: #4e4e4d;
	border-color: #4e4e4d;
}
.bkg-hover-grey:hover{
	background-color: #4e4e4d;
	border-color: #4e4e4d;
}
.border-hover-grey:hover{
	border-color: #4e4e4d;
}
.color-grey,
.color-hover-grey:hover{
	color: #4e4e4d;
}

/* charcoal */
.bkg-charcoal-light{
	background-color: #333; 
	border-color: #333;
}
.bkg-hover-charcoal-light:hover{
	background-color: #333; 
	border-color: #333;
}
.border-hover-charcoal-light:hover{
	border-color: #333;
}
.color-charcoal-light,
.color-hover-charcoal-light:hover{
	color: #333;
}
.bkg-charcoal{
	background-color: #497065; 
	border-color: #497065;
}
.bkg-hover-charcoal:hover{
	background-color: #232323; 
	border-color: #232323;
}
.border-charcoal,
.border-hover-charcoal:hover{
	border-color: #232323;
}
.color-charcoal,
.color-hover-charcoal:hover{
	color: #232323;
}

/* red */
.bkg-red{
	background-color: #d32326;
	border-color: #d32326;
}
.bkg-hover-red:hover{
	background-color: #d32326;
	border-color: #d32326;
}
.border-red,
.border-hover-red:hover{
	border-color: #d32326;
}
.color-red,
.color-hover-red:hover{
	color: #d32326;
}

/* pink */
.bkg-pink{
	background-color: #4a7065;
	border-color: #4a7065;
}
.bkg-hover-pink:hover{
	background-color: #4a7065;
	border-color: #4a7065;
}
.border-pink,
.border-hover-pink:hover{
	border-color: #4a7065;
}
.color-pink,
.color-hover-pink:hover{
	color: #4a7065;
}

/* blue */
.bkg-purple{
	background-color: #5e0231;
	border-color: #5e0231;
}
.bkg-hover-purple:hover{
	background-color: #5e0231;
	border-color: #5e0231;
}
.border-purple,
.border-hover-purple:hover{
	border-color: #5e0231;
}
.color-purple,
.color-hover-purple:hover{
	color: #5e0231;
}

/* blue */
.bkg-blue{
	background-color: #304cd1;
	border-color: #304cd1;
}
.bkg-hover-blue:hover{
	background-color: #304cd1;
	border-color: #304cd1;
}
.border-blue,
.border-hover-blue:hover{
	border-color: #304cd1;
}
.color-blue,
.color-hover-blue:hover{
	color: #304cd1;
}

/* green */
.bkg-green-light{
	background-color: #8dccaf;
	border-color: #8dccaf;
}
.bkg-hover-green-light:hover{
	background-color: #8dccaf;
	border-color: #8dccaf;
}
.border-green-light,
.border-hover-green-light:hover{
	border-color: #8dccaf;
}
.color-green-light,
.color-hover-green-light:hover{
	color: #8dccaf;
}

/* beige */
.bkg-beige{
	background-color: #5d5a54;
	border-color: #5d5a54;
}
.bkg-hover-beige:hover{
	background-color: #5d5a54;
	border-color: #5d5a54;
}
.border-beige,
.border-hover-beige:hover{
	border-color: #5d5a54;
}
.color-beige,
.color-hover-beige:hover{
	color: #5d5a54;
}

/* magnolia */
.bkg-magnolia{
	background-color: #e5c9b5;
	border-color: #e5c9b5;
}
.bkg-hover-magnolia:hover{
	background-color: #e5c9b5;
	border-color: #e5c9b5;
}
.border-magnolia,
.border-hover-magnolia:hover{
	border-color: #e5c9b5;
}
/* ... */

